# AL4EIPs

./: .gitignore  PUBLIC_RELEASE_MANIFEST.json  README.md  pixi.toml  pyproject.toml  ruff.toml  ty.toml
configs/: mace_ethanol_al.yaml
configs/final_fixed_member/: README.md
configs/frozen_v4/: README.md
configs/nequip/: base.yaml  ethanol_boost.yaml  ethanol_debug.yaml  ethanol_formal.yaml
reports/analysis/: cross_architecture_summary.json  final_seed_metrics.csv  passive_vs_al_comparison.json  passive_vs_al_comparison.md  standard_vs_al_v4_summary.md  statistical_summary.json  torsional_coverage_summary.csv  torsional_coverage_summary.json
scripts/analysis/: analyze_torsional_coverage_v4.py
scripts/experiments/: run_al_experiment.py  run_mace_mhc_v4_baseline.py  run_passive_v4_baseline.py  smoke_test_mace.py  smoke_test_nequip.py
scripts/hpc/: mace_mhc_v4_passive.slurm
scripts/setup/: 01_fetch_md17.py
src/fyp_al/: __init__.py  al_protocol.py  geometry.py  mace_backend.py  model_backend.py  nequip_backend.py  nequip_calc.py  transforms.py
tests/: test_smoke.py
