[build-system]
requires = ["setuptools>=81"]
build-backend = "setuptools.build_meta"

[project]
name = "fyp-al"
version = "0.1.0"
description = "Active learning workflows for MACE and NequIP interatomic potentials"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ase>=3.27,<4",
  "numpy>=2.4,<3",
  "ruamel.yaml>=0.19,<0.20",
  "torch>=2.10,<3",
]

[project.optional-dependencies]
mace = ["mace-torch>=0.3.13"]
nequip = ["nequip>=0.17,<0.18"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
